# TASI

./: .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CITATION.cff  README.md  pyproject.toml  setup.py  update-version.py
.github/workflows/: coverage.yml  python-publish.yml
.gitlab/issue_templates/: Bug.md  Feature.md  Refactor.md  UserStory.md
.gitlab/merge_request_templates/: Default.md
doc/: Makefile
doc/source/: about.rst  conf.py  contribute.rst  getting_started.rst  index.rst  user_guide.rst
doc/source/_static/: custom.css
doc/source/_static/logos/: DLR_black.js
doc/source/development/: how_to.rst  index.rst  python_style_guide.rst
doc/source/getting_started/: index.rst
doc/source/reference/: airqualitydataset.rst  dataset.rst  index.rst  roadconditiondataset.rst  trafficlightdataset.rst  trajectorydataset.rst  weatherdataset.rst
doc/source/reference/datasets/: airqualitydataset.rst  dataset.rst  index.rst  roadconditiondataset.rst  trafficlightdataset.rst  (+3 more)
doc/source/user_guide/: index.rst
dockerfiles/: base  release
tasi/: __init__.py  _version.py  base.py  dataset.py  indexing.py  logging.py  pose.py  trajectory.py
tasi/dataset/: base.py
tasi/dlr/: __init__.py  dataset.py
tasi/io/: zenodo.py
tasi/io/base/: __init__.py
tasi/io/orm/: __init__.py  base.py  db.py  geo.py  traffic_participant.py
tasi/io/public/: base.py  pose.py  traffic_light.py
tasi/plotting/: __init__.py  plot.py  wms.py
tasi/pose/: base.py
tasi/tests/: test_indexing.py  test_pose.py
tasi/tests/dlr/: test_conversion.py  test_filtering.py  test_loader.py
tasi/tests/io/: __init__.py
tasi/trajectory/: base.py
tasi/utils/: base.py  geo.py
tests/: __init__.py  test_geo.py  test_import.py  test_indexing.py  test_manipulation.py
tests/dlr/: test_loader.py
(+73 files in other folders)
