[tool.poetry]
name = "tasi"
version = "0.1.0"
description = "Library for Traffic Analysis and Situation Interpretation"
authors = ["Lars Klitzke <lars.klitzke@dlr.de>", "Clemens Schicktanz <clemens.schicktanz@dlr.de"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.5"
pandas = "2.0.3"
numpy = "1.24.4"
numba = "0.58.1"
typing-extensions = "4.12.2"

[tool.poetry.group.test.dependencies]
coverage
ipython
pytest
pytest-xdist
pytest-cov

[tool.poetry.group.dev.dependencies]
yapf
pylint

[tool.poetry.group.docs.dependencies]
[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "tasi/_version.py"
versionfile_build = "tasi/_version.py"
tag_prefix = ""
parentdir_prefix = "tasi-"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
download-dlr-ut-dataset = "tasi.dlr.dataset."